--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Education</a>
+            <a class="nav-link" href="#C1">Education</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="#">Skill</a>
@@ -73,7 +73,7 @@
   <!-- Content section -->
   <section class="py-5">
     <div class="container">
-      <h1>Education</h1>
+      <h1 id = "C1">Education</h1>
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
     </div>
