--- a/index.html
+++ b/index.html
@@ -35,16 +35,16 @@
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#C1">About</a>
+            <a class="nav-link" href="#">About</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#C2">Education</a>
+            <a class="nav-link" href="#C1">Education</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#C3">Skill</a>
+            <a class="nav-link" href="#C2">Skill</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#C4">Contact</a>
+            <a class="nav-link" href="#C3">Contact</a>
         </ul>
       </div>
     </div>
