--- a/index.html
+++ b/index.html
@@ -75,7 +75,8 @@
     <div class="container">
       <h1 id = "C2">Education</h1>
       <p class="lead">Bachelor,King Mongkut University Of Technology Thonburi.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+      <p class="lead">Aug,2017 - Present.</p>
+      <p>faculty of engineer, department of Electronic  & Communication engineer(international program).</p>
     </div>
   </section>
 
