--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
   </section>
 
   <!-- Image Section - set the background image for the header in the line below -->
-  <section class="py-5 bg-image-full" style="background-image: url('https://unsplash.it/1900/1080?image=1081');">
+  <section class="py-5 bg-image-full" style="background-image: url('https://upload.wikimedia.org/wikipedia/commons/7/7a/KMUTT.jpg');">
     <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
     <div style="height: 200px;"></div>
   </section>
