--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
   <section class="py-5">
     <div class="container">
       <h1 id = "C4">Contact</h1>
+      <img src="facebook.png" alt="facebook" width="30" height="30">
       <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
       <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
     </div>
