--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
   </section>
 
   <!-- Image Section - set the background image for the header in the line below -->
-  <section class="py-5 bg-image-full" style="background-image: src="phone.png" alt="phone");">
+  <section class="py-5 bg-image-full" style="background-image: url('https://scontent.fbkk12-2.fna.fbcdn.net/v/t1.0-9/49175668_2259908560999319_1271158509701955584_o.jpg?_nc_cat=105&_nc_ohc=56qQLz5vWgsAX8vBWp-&_nc_ht=scontent.fbkk12-2.fna&oh=f0e3563362edbf881fd83da0c7c6c18e&oe=5ED6DF41');">
     <!-- Put anything you want here! There is just a spacer below for demo purposes! -->
     <div style="height: 200px;"></div>
   </section>
