--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@
       <p><a href="https://www.facebook.com/profile.php?id=100009405902919"><img src="facebook.png" alt="facebook" width="30" height="30"></a></p> 
       <p><a href="https://instagram.com/_gpio_?igshid=1lkj5hw3tnd8d"><img src="instagram.png" alt="instagram" width="30" height="30"></a></p>
       <p class="lead"><img src="phone.png" alt="phone" width="30" height="30">094-427-4477</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+      <p class="lead"><img src="gmail.png" alt="gmail" width="30" height="30">perapatjanopas@gmail.com</p>
+      <p class="lead"><img src="home.png" alt="home" width="30" height="30"></p>
     </div>
   </section>
   
