--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
       <p><a href="https://instagram.com/_gpio_?igshid=1lkj5hw3tnd8d"><img src="instagram.png" alt="instagram" width="30" height="30"></a></p>
       <p class="lead"><img src="phone.png" alt="phone" width="30" height="30">+66(09)4-427-4477</p>
       <p class="lead"><img src="gmail.png" alt="gmail" width="30" height="30">perapatjanopas@gmail.com</p>
-      <p class="lead"><img src="home.png" alt="home" width="30" height="30">50/125 Prachautid72 Prachautid Rd Thung Kru Bangkok 10140 </p>
+      <p class="lead"><img src="home2.png" alt="home" width="30" height="30">50/125 Prachautid72 Prachautid Rd Thung Kru Bangkok 10140 </p>
     </div>
   </section>
   
