--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
   <section class="py-5">
     <div class="container">
       <h1 id ="C3">Skill</h1>
-      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-      <p class="lead">Aug,2017 - Present.</p>
-      <p>faculty of engineer, department of Electronic  & Communication engineer(international program).</p>
+      <p class="lead">Basic python</p>
+      <p class="lead">Basic C&C++</p>
+      <p class="lead">Basic html</p>
     </div>
   </section>
 
