--- a/index.html
+++ b/index.html
@@ -110,11 +110,7 @@
   <section class="py-5">
     <div class="container">
       <h1 id = "C4">Work</h1>
-      <p><a href="https://www.facebook.com/profile.php?id=100009405902919"><img src="facebook.png" alt="facebook" width="30" height="30"></a></p> 
-      <p><a href="https://instagram.com/_gpio_?igshid=1lkj5hw3tnd8d"><img src="instagram.png" alt="instagram" width="30" height="30"></a></p>
-      <p class="lead"><img src="phone.png" alt="phone" width="30" height="30">+66(09)4-427-4477</p>
-      <p class="lead"><img src="gmail.png" alt="gmail" width="30" height="30">perapatjanopas@gmail.com</p>
-      <p class="lead"><img src="home2.png" alt="home" width="30" height="30">50/125 Prachautid72 Prachautid Rd Thung Kru Bangkok 10140 </p>
+      <p><a href="https://perapat-j.github.io/Perapat.github.io/"></a></p> 
     </div>
   </section>
   
