--- a/index.html
+++ b/index.html
@@ -94,9 +94,9 @@
   <section class="py-5">
     <div class="container">
       <h1 id ="C3">Skill</h1>
-      <p class="lead">Basic python</p>
+      <p class="lead">Basic Python</p>
       <p class="lead">Basic C&C++</p>
-      <p class="lead">Basic html</p>
+      <p class="lead">Logic skill</p>
     </div>
   </section>
 
