--- a/index.html
+++ b/index.html
@@ -63,8 +63,7 @@
   <section class="py-5">
     <div class="container">
       <h1 id = "C1">About</h1>
-      <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquid, suscipit, rerum quos facilis repellat architecto commodi officia atque nemo facere eum non illo voluptatem quae delectus odit vel itaque amet.</p>
+      <p>I'm a third year student in faculty of Electronic and communication Engineer my department doesn't focus on Data science much but </p>
     </div>
   </section>
 
