--- a/index.html
+++ b/index.html
@@ -63,7 +63,10 @@
   <section class="py-5">
     <div class="container">
       <h1 id = "C1">About</h1>
-      <p>I'm a third year student in faculty of Electronic and communication Engineer my department doesn't focus on Data science much but </p>
+      <p>I'm a third year student in faculty of Electronic and communication Engineer my department doesn't focus on Data science much but I am interested. I've practice python programming by myself since  
+      2018 by raspberry pi to control device with GPIO through python after that I bought 3 course from Udemy there are Data Science, Machine learning, and Deep learning course after I pass Probality coure
+      from my university and I found Data is awesome and very important to Human, so I decide to join in field of data science. Finally I'm ready to learn as much as I can
+      </p>
     </div>
   </section>
 
