--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
       <h1 id ="C3">Skill</h1>
       <p class="lead">Basic Python</p>
       <p class="lead">Basic C&C++</p>
-      <p class="lead">Logic skill</p>
+      <p class="lead">Basic HTML</p>
     </div>
   </section>
 
