--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
   <section class="py-5">
     <div class="container">
       <h1 id = "C4">Work</h1>
-      <p><a href="https://perapat-j.github.io/Perapat.github.io/">click here</a></p> 
+      <p><a href="https://github.com/Perapat-J/Perapat.work">click here</a></p> 
     </div>
   </section>
   
